<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/leather"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/KiloPadding"
        android:layout_toStartOf="@id/songDuration"
        android:fontFamily="serif"
        android:text="@string/DemoLongString"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/songDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/PlayButton"
        android:fontFamily="serif"
        android:text="@string/SongDuration"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/PlayButton"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/StandardButtonHeight"
        android:layout_height="@dimen/StandardButtonHeight"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/StandardPadding"
        android:background="@android:color/transparent"
        android:contentDescription="@string/PlayDescription"
        app:srcCompat="@android:drawable/ic_media_play" />

</RelativeLayout>